# moteval

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
.github/actions/setup-python/: action.yaml
.github/workflows/: main.yaml
docs/: DATASETS.md
moteval/: __init__.py  cli.py  download.py  eval.py  formats.py  results.py
moteval/benchmarks/: README.md  __init__.py  animaltrack.py  base.py  bft.py  chimpact.py  dancetrack.py  download.py  gmot40.py  motchallenge.py  mots20.py  panaf500.py  registry.py  sportsmot.py  toy.py  uavdt.py
moteval/data/: convert.py  model.py  protocol.py  registry.py  similarity.py
moteval/formats/: mot_txt.py  mots_txt.py
moteval/metrics/: __init__.py  _matching.py  base.py  clear.py  count.py  hota.py  identity.py  jf.py  track_map.py
scripts/: download_benchmarks.py  regen_parity_fixtures.py
tests/: conftest.py  perturb.py  scenarios.py  test_cli.py  test_data.py  test_data_cli.py  test_download.py  test_download_specs.py  test_evaluate.py  test_extensibility.py  test_formats.py  test_frame_indexing.py  test_loaders.py  test_loaders_animaltrack.py  test_loaders_bft.py  test_loaders_chimpact.py  test_loaders_gmot40.py  test_loaders_motchallenge.py  test_loaders_panaf500.py  test_loaders_uavdt.py  test_masks.py  test_metrics.py  test_model.py  test_oracle.py  test_parity.py  test_parity_real.py  test_protocol_engine.py  test_registry.py  test_similarity.py
tests/fixtures/: real_data.json  synthetic_box.json  synthetic_mots.json  synthetic_trackmap.json
tests/oracle/: VENDORED.md  runner.py
tests/parity/: perturb.py  test_oracle_clear.py  test_oracle_identity.py  test_oracle_jf.py  test_oracle_synthetic.py  test_oracle_trackmap.py  test_real_data.py
